# Burymetal_API_v1

./: Burymetal API.md  CMakeLists.txt  Makefile  README.md
 docs/: api.md
examples/: bm_rall.c  buffer_test.c  error_demo.c  main.c  matmul_ai.c  simple_compute.c
include/: bm_backend.h  bm_raii.h  bm_types.h  bm_utils.h  burymetal.h
include/burymetal/: bm_raii.h  bm_types.h  bm_utils.h  burymetal.h
memory/: bm_mem_alloc.c  bm_mem_alloc.h  bm_mem_pool.c  bm_mem_pool.h  bm_mem_utils.c  bm_mem_utils.h
src/: bm_backend.c  bm_backend_amd.c  bm_buffers.c  bm_device.c  bm_kernel.c
src/backends/: bm_backend.c  bm_backend_cpu.c  bm_backend_intel.c  bm_backend_nvidia.c
src/core/: bm_buffers.c  bm_device.c  bm_kernel.c  bm_utils.c
tests/: test_buffer.c  test_burymetal.c  test_device.c  test_kernel.c  test_main.c
